# rules_webtesting

./: .bazelignore  .bazelrc  .gitignore  .mention-bot  .travis.yml  AUTHORS  BUILD  BUILD.bazel  BUILD.chrome  BUILD.gorilla_mux  BUILD.net  BUILD.selenium  BUILD.selenium_go  BUILD.selenium_java  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS  MODULE.bazel  README.md  RULES.md  WORKSPACE  build_web_modules.sh  go.mod  go.sum  repository_rules.md  requirements.in  requirements_lock.txt  requirements_lock_windows.txt  resolved_deps.py  rules.md  sauce.md  setup.sh  web.bzl
.bazelci/: presubmit.yml  setup_ubuntu.sh
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
browsers/: BUILD  BUILD.bazel  chrome-external.json  chrome-native.json  chrome55-win10-sauce.json  chromium-local.json  chromium-native.json  external.json  firefox-external.json  firefox-local.json  firefox-native.json  phantomjs.json  safari-local.json  size.json
browsers/sauce/: BUILD  BUILD.bazel  chrome-win10-connect.json  chrome-win10.json  chrome55-win10.json
build_files/: BUILD  BUILD.bazel  BUILD.chromedriver  BUILD.firefox  BUILD.geckodriver  BUILD.phantomjs  BUILD.selenium_java  BUILD.selenium_py  com_github_gorilla_mux.BUILD  com_github_tebeka_selenium.BUILD  com_github_urllib3.BUILD  metadata.BUILD  (+6 more)
common/conditions/: BUILD.bazel
go/launcher/proxy/driverhub/: BUILD  BUILD.bazel  driver_hub.go  driver_responses.go  driver_session.go
go/launcher/proxy/driverhub/debugger/: BUILD  BUILD.bazel  debugger.go  debugger_test.go
go/launcher/proxy/driverhub/drivermu/: BUILD  BUILD.bazel  driver_mu.go
go/launcher/proxy/driverhub/googlescreenshot/: BUILD  BUILD.bazel  google_screenshot.go
go/launcher/proxy/driverhub/mobileemulation/: BUILD  mobileemulation.go  mobileemulation_test.go  mobileemulation_test.json
go/launcher/proxy/driverhub/quithandler/: BUILD  BUILD.bazel  quit_handler.go  quit_handler_test.go
go/launcher/proxy/driverhub/screenshot/: BUILD  screenshot.go  screenshot_test.go
go/launcher/proxy/driverhub/scripttimeout/: BUILD  BUILD.bazel  script_timeout.go  script_timeout_test.go
go/launcher/webdriver/: BUILD  BUILD.bazel  webdriver.go  webdriver_error.go  webdriver_test.go
go/metadata/main/: BUILD  BUILD.bazel  merger.go  merger_test.sh
go/screenshotter/: BUILD  BUILD.bazel  screenshotter.go  screenshotter_test.go
go/webdriver/: BUILD.bazel  webdriver.go  webdriver_test.go
go/webtest/: BUILD  BUILD.bazel  browserinfo_test.go  webtest.go  webtest_test.go
go/wsl/: BUILD.bazel  wsl.go  wsl_test.go
go/wsl/driver/: BUILD  BUILD.bazel  driver.go
go/wsl/hub/: BUILD.bazel  hub.go
go/wsl/main/: BUILD  BUILD.bazel  main.go  wsl.go
go/wsl/resolver/: BUILD  BUILD.bazel  resolver.go
go/wsl/upload/: BUILD.bazel  upload.go  upload_test.go
go/wtl/: BUILD.bazel  wtl.go
go/wtl/diagnostics/: BUILD.bazel  diagnostics.go
go/wtl/environment/: BUILD.bazel  environment.go
go/wtl/environment/local/: BUILD.bazel  local.go
go/wtl/environment/sauce/: BUILD.bazel  sauce.go
go/wtl/errors/: BUILD.bazel  errors_test.go
go/wtl/healthreporter/: BUILD.bazel  health_reporter.go  health_reporter_test.go
go/wtl/main/: BUILD.bazel  main.go
go/wtl/proxy/: BUILD.bazel  proxy.go
go/wtl/proxy/driverhub/: BUILD.bazel  driver_hub.go  driver_responses.go  driver_session.go
go/wtl/proxy/driverhub/debugger/: BUILD.bazel  debugger.go  debugger_test.go
go/wtl/proxy/driverhub/drivermu/: BUILD.bazel  driver_mu.go
go/wtl/proxy/driverhub/googlescreenshot/: BUILD.bazel  google_screenshot.go
go/wtl/proxy/driverhub/quithandler/: BUILD.bazel  quit_handler.go  quit_handler_test.go
go/wtl/proxy/driverhub/scripttimeout/: BUILD.bazel  script_timeout.go  script_timeout_test.go
go/wtl/proxy/healthz/: BUILD.bazel  healthz.go
go/wtl/service/: BUILD.bazel  cmd.go  server.go  service.go
go/wtl/service/sauce/: BUILD.bazel  connect.go
go/wtl/service/wsl/: BUILD.bazel  wsl.go
javatests/com/google/testing/web/: BUILD  BUILD.bazel  BrowserTest.java  WebKotlinTest.kt  WebTestTest.java
javatests/com/google/testing/web/screenshotter/: BUILD  BUILD.bazel  ScreenshotterTest.java
testdata/: BUILD  BUILD.bazel  all-fields.json  android-browser-gingerbread-nexus-s.json  bad-named-files.json  cert.pem  extension.json  merge-from-file-result.json  merger-result.json  named-files2.json  testpage.html  webdriver.html  webdriver_autofocus.html
web/: BUILD  BUILD.bazel  bindings.bzl  dart.bzl  extension.bzl  go.bzl  go_repositories.bzl  java.bzl  java_repositories.bzl  kotlin.bzl  py.bzl  py_repositories.bzl  repositories.bzl  scala.bzl  web.bzl
web/internal/: BUILD  BUILD.bazel  browser.bzl  collections.bzl  constants.bzl  custom_browser.bzl  executable_name.bzl  extract.bat  extract.sh  files.bzl  go_repository.bzl  java_import_external.bzl  metadata.bzl  noop_web_test.sh.template  platform_archive.bzl  platform_http_file.bzl  platform_metadata.bzl  provider.bzl  runfiles.bzl  shared.bzl  web_test.bzl  web_test.sh.template  web_test_archive.bzl  web_test_config.bzl  web_test_files.bzl  web_test_metadata_aspect.bzl  web_test_named_executable.bzl  web_test_named_file.bzl  windows_utils.bzl  wrap_web_test_suite.bzl
web/scala/: BUILD.bazel  MODULE.bazel
web/versioned/: BUILD.bazel  browsers-0.3.1.bzl  browsers-0.3.2.bzl  browsers-0.3.3.bzl  browsers-0.3.4.bzl
web/web_go/: MODULE.bazel
web/web_go/go/: go.bzl
web/web_java/: MODULE.bazel
web/web_python/: BUILD.bazel  MODULE.bazel
web/web_python/python/: BUILD.bazel
web/web_python/pythontests/: BUILD.bazel
web/web_scala/: MODULE.bazel
web/web_scala/scala/: BUILD.bazel
web/web_scala/scalatests/: BUILD.bazel  WebTestTest.scala
web_scala/scalatests/: BUILD.bazel
web_testing_go/: MODULE.bazel  webtest
web_testing_go/testdata/: BUILD  all-fields.json
web_testing_go/web/: BUILD.bazel  go.bzl
web_testing_go/webtest/: BUILD.bazel  browserinfo_test.go  webtest  webtest.go  webtest_test.go
web_testing_python/testing/web/: BUILD.bazel  webtest.py  webtest_test.py
web_testing_python/testing/web/debugger/: BUILD
(+287 files in other folders)
