# Copyright 2016 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################
#
load("@io_bazel_rules_scala//scala:scala.bzl", "setup_scala_testing_toolchain")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@python_versions//3.11:defs.bzl", "compile_pip_requirements")

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

gazelle(
    name = "gazelle",
    prefix = "github.com/bazelbuild/rules_webtesting",
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

setup_scala_testing_toolchain(
    name = "scalatest_toolchain",
    scalatest_classpath = [
       "@maven//:org_scalactic_scalactic_2_13",
       "@maven//:org_scalatest_scalatest_2_13",
       "@maven//:org_scalatest_scalatest_compatible",
       "@maven//:org_scalatest_scalatest_core_2_13",
       "@maven//:org_scalatest_scalatest_flatspec_2_13",
       "@maven//:org_scalatest_scalatest_matchers_core_2_13",
       "@maven//:org_scalatest_scalatest_mustmatchers_2_13",
    ],
)
