###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "rules_webtesting", repo_name = "io_bazel_rules_webtesting")

bazel_dep(name = "rules_go", version = "0.51.0-rc1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_scala", version = "", repo_name = "io_bazel_rules_scala")
git_override(
    module_name = "rules_scala",
    remote = "https://github.com/mbland/rules_scala",
    commit = "7fb52c7fc2ef8f7670feb73c0a9869715bdc40b8",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_jvm_external", version = "6.6")
# -- bazel_dep definitions -- #


go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_tebeka_selenium",
    "com_github_gorilla_mux",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:33.2.1-jre",
        "org.seleniumhq.selenium:selenium-remote-driver:4.27.0",
        "org.seleniumhq.selenium:selenium-api:4.27.0",
    ],
)
use_repo(maven, "maven")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
platform_archive = use_repo_rule("//web/internal:platform_archive.bzl", "platform_archive")
jvm_import_external = use_repo_rule("@bazel_tools//tools/build_defs/repo:jvm.bzl", "jvm_import_external")
# -- use_repo_rule statements -- #


platform_archive(
  name = "org_mozilla_firefox_macos_arm64",
  urls = [
    "https://ftp.mozilla.org/pub/firefox/releases/90.0.1/mac/en-US/Firefox%2090.0.1.dmg",
    "https://storage.googleapis.com/dev-infra-mirror/mozilla/firefox/Firefox%2090.0.1.dmg"
  ],
  sha256 = "76c1b9c42b52c7e5be4c112a98b7d3762a18841367f778a179679ac0de751f05",
  licenses = [
    "reciprocal"
  ],
  named_files = {
    "FIREFOX": "Firefox.app/Contents/MacOS/firefox"
  },
)

http_archive(
  name = "org_seleniumhq_py",
  urls = [
    "https://files.pythonhosted.org/packages/ed/9c/9030520bf6ff0b4c98988448a93c04fcbd5b13cd9520074d8ed53569ccfe/selenium-3.141.0.tar.gz"
  ],
  sha256 = "deaf32b60ad91a4611b98d8002757f29e6f2c2d5fcaf202e1c9ad06d6772300d",
  strip_prefix = "selenium-3.141.0",
  build_file = "//build_files:org_seleniumhq_py.BUILD",
)

platform_archive(
  name = "org_chromium_chromedriver_macos_arm64",
  urls = [
    "https://storage.googleapis.com/chromium-browser-snapshots/Mac_Arm/902390/chromedriver_mac64.zip",
    "https://storage.googleapis.com/dev-infra-mirror/chromium/902390/chromedriver_mac_arm64.zip"
  ],
  sha256 = "1f100aacf4bab4b3ac4218ecf654b17d66f2e07dd455f887bb3d9aa8d21862e1",
  licenses = [
    "reciprocal"
  ],
  named_files = {
    "CHROMEDRIVER": "chromedriver_mac64/chromedriver"
  },
)

platform_archive(
  name = "org_mozilla_geckodriver_macos_arm64",
  urls = [
    "https://github.com/mozilla/geckodriver/releases/download/v0.29.1/geckodriver-v0.29.1-macos-aarch64.tar.gz",
    "https://storage.googleapis.com/dev-infra-mirror/mozilla/geckodriver/0.29.1/geckodriver-v0.29.1-macos-aarch64.tar.gz"
  ],
  sha256 = "a1ec058b930fbfb684e30071ea47eec61bc18acb489914a9e0d095ede6088eea",
  licenses = [
    "reciprocal"
  ],
  named_files = {
    "GECKODRIVER": "geckodriver"
  },
)

platform_archive(
  name = "org_chromium_chromium_macos_arm64",
  urls = [
    "https://storage.googleapis.com/chromium-browser-snapshots/Mac_Arm/902390/chrome-mac.zip",
    "https://storage.googleapis.com/dev-infra-mirror/chromium/902390/chrome-mac_arm64.zip"
  ],
  sha256 = "4845ce895d030aeb8bfd877a599f1f07d8c7a77d1e08513e80e60bb0093fca24",
  licenses = [
    "notice"
  ],
  named_files = {
    "CHROMIUM": "chrome-mac/Chromium.app/Contents/MacOS/Chromium"
  },
)

http_archive(
  name = "com_github_urllib3",
  urls = [
    "https://files.pythonhosted.org/packages/9a/8b/ea6d2beb2da6e331e9857d0a60b79ed4f72dcbc4e2c7f2d2521b0480fda2/urllib3-1.25.2.tar.gz"
  ],
  sha256 = "a53063d8b9210a7bdec15e7b272776b9d42b2fd6816401a0d43006ad2f9902db",
  strip_prefix = "urllib3-1.25.2",
  build_file = "//build_files:com_github_urllib3.BUILD",
)

# -- repo definitions -- #

# End of extension `extension_for_scala_config`
