module(name = "rules_webtesting", version = "0.4.0")

bazel_dep(name = "rules_go", version = "0.51.0-rc1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_scala", version = "", repo_name = "io_bazel_rules_scala")
# TODO: Switch to a release version once it's available in BCR.
# Otherwise, the root module has to declare the same override.
git_override(
    module_name = "rules_scala",
    remote = "https://github.com/mbland/rules_scala",
    commit = "7fb52c7fc2ef8f7670feb73c0a9869715bdc40b8",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_python", version = "1.0.0")

##### Go dependencies #####
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_tebeka_selenium",
    "com_github_gorilla_mux",
)

##### Java dependencies #####
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:33.2.1-jre",
        "org.seleniumhq.selenium:selenium-remote-driver:4.27.0",
        "org.seleniumhq.selenium:selenium-api:4.27.0",
    ],
)
use_repo(maven, "maven")

##### Python dependencies #####
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "rules_webtesting_py_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "rules_webtesting_py_deps")

##### Scala dependencies #####

register_toolchains(
    # "@io_bazel_rules_scala//scala:unused_dependency_checker_error_toolchain",
    # "@io_bazel_rules_scala//test/proto:scalapb_toolchain",
    "@io_bazel_rules_scala//test/toolchains:java21_toolchain_definition",
    dev_dependency = True,
)

##### Browsers dependencies #####
browser_repositories = use_extension("//web/versioned:browsers-0.3.3.bzl", "browser_repositories_extension")
use_repo(
    browser_repositories,
    "com_saucelabs_sauce_connect_linux_x64",
    "com_saucelabs_sauce_connect_macos_x64",
    "com_saucelabs_sauce_connect_windows_x64",
    "org_chromium_chromedriver_linux_x64",
    "org_chromium_chromedriver_macos_x64",
    "org_chromium_chromedriver_macos_arm64",
    "org_chromium_chromedriver_windows_x64",
    "org_chromium_chromium_linux_x64",
    "org_chromium_chromium_macos_x64",
    "org_chromium_chromium_macos_arm64",
    "org_chromium_chromium_windows_x64",
    "org_mozilla_firefox_linux_x64",
    "org_mozilla_firefox_macos_x64",
    "org_mozilla_firefox_macos_arm64",
    "org_mozilla_geckodriver_linux_x64",
    "org_mozilla_geckodriver_macos_x64",
    "org_mozilla_geckodriver_macos_arm64",
)
