# Copyright 2016 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################
#
load("//web:web.bzl", "browser", "custom_browser")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

browser(
    name = "firefox-external",
    execution_requirements = {"requires-network": ""},
    metadata = "firefox-external.json",
)

browser(
    name = "chrome-external",
    execution_requirements = {"requires-network": ""},
    metadata = "chrome-external.json",
)

browser(
    name = "disabled",
    disabled = "disabled pseudo-browser",
    metadata = "disabled.json",
)

browser(
    name = "chromium-local",
    metadata = "chromium-local.json",
    deps = [
        "//go/wsl",
        "//third_party/chromedriver",
        "//third_party/chromium",
    ],
)

browser(
    name = "firefox-local",
    disabled = select({
        "//common/conditions:windows": "firefox not supported on windows",
        "//conditions:default": None,
    }),
    metadata = "firefox-local.json",
    deps = select({
        "//common/conditions:windows": [],
        "//conditions:default": [
            "//go/wsl",
            "//third_party/firefox",
            "//third_party/geckodriver",
        ],
    }),
)

custom_browser(
    name = "chromium-local-1024x768",
    browser = ":chromium-local",
    metadata = "size.json",
)
