# Copyright 2017 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################
#
load("//web:web.bzl", "browser")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

browser(
    name = "chrome-win10",
    execution_requirements = {"requires-network": ""},
    metadata = "chrome-win10.json",
    required_tags = [
        "sauce",
        "exclusive",
    ],
)

browser(
    name = "chrome-win10-connect",
    execution_requirements = {"requires-network": ""},
    metadata = "chrome-win10-connect.json",
    required_tags = [
        "sauce",
        "exclusive",
        "notravis",
        "nobuildkite",
    ],
    deps = ["//third_party/sauceconnect"],
)
