# Copyright 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################
#
load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])  # Apache 2.0

go_library(
    name = "go_default_library",
    srcs = ["wtl.go"],
    importpath = "github.com/bazelbuild/rules_webtesting/go/wtl",
    visibility = [":__subpackages__"],
    deps = [
        "//go/bazel:go_default_library",
        "//go/cmdhelper:go_default_library",
        "//go/errors:go_default_library",
        "//go/metadata:go_default_library",
        "//go/portpicker:go_default_library",
        "//go/wtl/diagnostics:go_default_library",
        "//go/wtl/environment:go_default_library",
        "//go/wtl/environment/external:go_default_library",
        "//go/wtl/environment/local:go_default_library",
        "//go/wtl/environment/sauce:go_default_library",
        "//go/wtl/proxy:go_default_library",
        "//go/wtl/proxy/driverhub:go_default_library",
        "//go/wtl/proxy/driverhub/drivermu:go_default_library",
        "//go/wtl/proxy/driverhub/quithandler:go_default_library",
        "//go/wtl/proxy/driverhub/scripttimeout:go_default_library",
        "//go/wtl/proxy/healthz:go_default_library",
    ],
)
